packages/typ/tests/fixtures/diagnostics/0994_mli_binary_type_underapplied_09.mli.infer.expected
File "0994_mli_binary_type_underapplied_09.mli", line 1:
Warning 24 [bad-module-name]: bad source file name: 0994_mli_binary_type_underapplied_09 is not a valid module name.

File "0994_mli_binary_type_underapplied_09.mli", line 2, characters 13-26:
2 | val x_iota : int pair_iota
                 ^^^^^^^^^^^^^
Error: The type constructor pair_iota expects 2 argument(s),
       but is here applied to 1 argument(s)
